解决《阳痿美国》这本书的目录无法正常切割问题